objects/privateAppEx__App__c.object
<CustomObject>
    <description>An app that is listed in one or more languages in the store.</description>
    <fields>
        <fullName>privateAppEx__AppSourceId__c</fullName>
        <description>The 18 character ID of the tabset or connected app that is listed in the store.</description>
        <inlineHelpText>The 18 character ID of the tabset or connected app that is listed in the store.</inlineHelpText>
        <label>App/Connected App</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__AppType__c</fullName>
        <description>The type of application.</description>
        <inlineHelpText>The type of application.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privateAppEx__Categories__c</fullName>
        <description>The categories in which the app is included in the store.</description>
        <inlineHelpText>The categories in which the app is included in the store.</inlineHelpText>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>CustomerService</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>HumanResources</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privateAppEx__DefaultListing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default listing is shown to users whose language setting doesn&apos;t match any language-specific listing for the app.</description>
        <inlineHelpText>The default listing is shown to users whose language setting doesn&apos;t match any language-specific listing for the app.</inlineHelpText>
        <label>Default Listing</label>
        <referenceTo>privateAppEx__Listing__c</referenceTo>
        <relationshipLabel>Apps</relationshipLabel>
        <relationshipName>Apps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>privateAppEx__FirstListedDate__c</fullName>
        <description>The date of the first published listing for the app.</description>
        <inlineHelpText>The date of the first published listing for the app.</inlineHelpText>
        <label>First Listed Date</label>
        <summarizedField>privateAppEx__Listing__c.privateAppEx__ListedDate__c</summarizedField>
        <summaryFilterItems>
            <field>privateAppEx__Listing__c.privateAppEx__Status__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>privateAppEx__Listing__c.privateAppEx__App__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Languages__c</fullName>
        <description>The languages that the app supports.</description>
        <inlineHelpText>The languages that the app supports.</inlineHelpText>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privateAppEx__LiveListings__c</fullName>
        <description>The number of listings for the app that are published and available in the store.</description>
        <inlineHelpText>The number of listings for the app that are published and available in the store.</inlineHelpText>
        <label>Published Listings</label>
        <summaryFilterItems>
            <field>privateAppEx__Listing__c.privateAppEx__Status__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>privateAppEx__Listing__c.privateAppEx__App__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__PageViewsAllTime__c</fullName>
        <description>The number of page views for the app for all time.</description>
        <inlineHelpText>The number of page views for the app for all time.</inlineHelpText>
        <label>Page Views (All Time)</label>
        <summarizedField>privateAppEx__Listing__c.privateAppEx__PageViewsAllTime__c</summarizedField>
        <summaryForeignKey>privateAppEx__Listing__c.privateAppEx__App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__PageViews__c</fullName>
        <description>The number of page views for the app in the last 30 days.</description>
        <inlineHelpText>The number of page views for the app in the last 30 days.</inlineHelpText>
        <label>Page Views</label>
        <summarizedField>privateAppEx__Listing__c.privateAppEx__PageViews__c</summarizedField>
        <summaryForeignKey>privateAppEx__Listing__c.privateAppEx__App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__PermissionSet__c</fullName>
        <description>ID of Permission Set that grants access to the app.</description>
        <inlineHelpText>ID of Permission Set that grants access to the app.</inlineHelpText>
        <label>Access</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__PopularityAllTime__c</fullName>
        <description>Popularity by requests/installs (dependent on app type) for all time.</description>
        <inlineHelpText>Popularity by requests/installs (dependent on app type) for all time.</inlineHelpText>
        <label>Requests/Installs</label>
        <summarizedField>privateAppEx__Listing__c.privateAppEx__PopularityAllTime__c</summarizedField>
        <summaryForeignKey>privateAppEx__Listing__c.privateAppEx__App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Popularity__c</fullName>
        <description>Popularity by requests/installs (dependent on app type) for last 30 days.</description>
        <inlineHelpText>Popularity by requests/installs (dependent on app type) for last 30 days.</inlineHelpText>
        <label>Popularity (30 Days)</label>
        <summarizedField>privateAppEx__Listing__c.privateAppEx__Popularity__c</summarizedField>
        <summaryForeignKey>privateAppEx__Listing__c.privateAppEx__App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Status__c</fullName>
        <description>Publication status of the app: if it has any published listings it is published, otherwise hidden.</description>
        <formula>IF(privateAppEx__LiveListings__c &gt; 0,  $Label.privateAppEx__Published, $Label.privateAppEx__Hidden)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Publication status of the app: if it has any published listings it is published, otherwise hidden.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privateAppEx__Store__c</fullName>
        <description>The store in which the app is listed.</description>
        <inlineHelpText>The store in which the app is listed.</inlineHelpText>
        <label>Store</label>
        <referenceTo>privateAppEx__Store__c</referenceTo>
        <relationshipLabel>Apps</relationshipLabel>
        <relationshipName>Apps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>privateAppEx__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the app is available in the store and included in the administrator&apos;s activities.</description>
        <inlineHelpText>Indicates if the app is available in the store and included in the administrator&apos;s activities.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>App</label>
    <listViews>
        <fullName>privateAppEx__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>